--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-black-dashboard-pro",
+  "name": "TAMADUM",
   "version": "1.4.1",
   "private": true,
   "description": "Vue Black Dashboard PRO",
@@ -11,13 +11,14 @@
     "dev": "npm run serve"
   },
   "dependencies": {
+    "@floating-ui/vue": "^1.0.6",
     "@fullcalendar/core": "5.11.3",
     "@fullcalendar/daygrid": "5.11.3",
     "@fullcalendar/interaction": "5.11.3",
     "@fullcalendar/timegrid": "5.11.3",
     "@fullcalendar/vue": "5.11.3",
     "@tweenjs/tween.js": "18.6.4",
-    "bootstrap": "4.6.0",
+    "bootstrap": "4.6.1",
     "chart.js": "2.9.3",
     "core-js": "3.16.0",
     "d3": "7.6.1",
@@ -27,11 +28,11 @@
     "fuse.js": "6.6.2",
     "google-maps": "4.3.3",
     "nouislider": "15.6.1",
-    "perfect-scrollbar": "1.5.5",
+    "perfect-scrollbar": "^1.5.5",
     "register-service-worker": "1.7.2",
     "sweetalert2": "11.6.14",
     "vee-validate": "3.4.11",
-    "vue": "2.7.14",
+    "vue": "^2.7.16",
     "vue-chartjs": "3.5.1",
     "vue-i18n": "8.25.0",
     "vue-router": "3.5.2",
